Incremental commit